Publishing to gh-pages (publish.sh)

--- a/404.html
+++ b/404.html
@@ -72,8 +72,8 @@
   
 
   
-  <link rel="alternate" href="http://davidsonic.github.io/academic_blog/index.xml" type="application/rss+xml" title="Jiali Duan&#39;s Personal Website">
-  <link rel="feed" href="http://davidsonic.github.io/academic_blog/index.xml" type="application/rss+xml" title="Jiali Duan&#39;s Personal Website">
+  <link rel="alternate" href="https://davidsonic.github.io/academic_blog/index.xml" type="application/rss+xml" title="Jiali Duan&#39;s Personal Website">
+  <link rel="feed" href="https://davidsonic.github.io/academic_blog/index.xml" type="application/rss+xml" title="Jiali Duan&#39;s Personal Website">
   
 
   <link rel="manifest" href="/academic_blog/site.webmanifest">
@@ -240,23 +240,23 @@
   <h2>Posts</h2>
   
   <ul>
-    <li><a href="http://davidsonic.github.io/academic_blog/post/robot-tough-love/">USC Media Coverage of Our Work!</a></li>
+    <li><a href="https://davidsonic.github.io/academic_blog/post/robot-tough-love/">USC Media Coverage of Our Work!</a></li>
   </ul>
   
   <ul>
-    <li><a href="http://davidsonic.github.io/academic_blog/post/ee155/">EE155 File IO</a></li>
+    <li><a href="https://davidsonic.github.io/academic_blog/post/ee155/">EE155 File IO</a></li>
   </ul>
   
   <ul>
-    <li><a href="http://davidsonic.github.io/academic_blog/post/deep-learning/">USC Deep Learning Presentation</a></li>
+    <li><a href="https://davidsonic.github.io/academic_blog/post/deep-learning/">USC Deep Learning Presentation</a></li>
   </ul>
   
   <ul>
-    <li><a href="http://davidsonic.github.io/academic_blog/post/group_seminar_physics/">Group Seminar Presentation</a></li>
+    <li><a href="https://davidsonic.github.io/academic_blog/post/group_seminar_physics/">Group Seminar Presentation</a></li>
   </ul>
   
   <ul>
-    <li><a href="http://davidsonic.github.io/academic_blog/post/open-house/">USC Robotics Open House</a></li>
+    <li><a href="https://davidsonic.github.io/academic_blog/post/open-house/">USC Robotics Open House</a></li>
   </ul>
   
   
@@ -266,23 +266,23 @@
   <h2>Publications</h2>
   
   <ul>
-    <li><a href="http://davidsonic.github.io/academic_blog/publication/robot-socal/">Robust Grasping via Human Adversary</a></li>
+    <li><a href="https://davidsonic.github.io/academic_blog/publication/robot-socal/">Robust Grasping via Human Adversary</a></li>
   </ul>
   
   <ul>
-    <li><a href="http://davidsonic.github.io/academic_blog/publication/robot-iros/">Robot Learning via Human Adversarial Games</a></li>
+    <li><a href="https://davidsonic.github.io/academic_blog/publication/robot-iros/">Robot Learning via Human Adversarial Games</a></li>
   </ul>
   
   <ul>
-    <li><a href="http://davidsonic.github.io/academic_blog/publication/digit-syn/">AN INTERPRETABLE GENERATIVE MODEL FOR HANDWRITTEN DIGIT IMAGE SYNTHESIS</a></li>
+    <li><a href="https://davidsonic.github.io/academic_blog/publication/digit-syn/">AN INTERPRETABLE GENERATIVE MODEL FOR HANDWRITTEN DIGIT IMAGE SYNTHESIS</a></li>
   </ul>
   
   <ul>
-    <li><a href="http://davidsonic.github.io/academic_blog/publication/interpretable/">Interpretable Convolutional Neural Networks via Feedforward Design</a></li>
+    <li><a href="https://davidsonic.github.io/academic_blog/publication/interpretable/">Interpretable Convolutional Neural Networks via Feedforward Design</a></li>
   </ul>
   
   <ul>
-    <li><a href="http://davidsonic.github.io/academic_blog/publication/portraitgan/">PortraitGAN for Flexible Portrait Manipulation</a></li>
+    <li><a href="https://davidsonic.github.io/academic_blog/publication/portraitgan/">PortraitGAN for Flexible Portrait Manipulation</a></li>
   </ul>
   
   
@@ -295,23 +295,23 @@
   <h2>Projects</h2>
   
   <ul>
-    <li><a href="http://davidsonic.github.io/academic_blog/project/rl-indoor-navigation/">RL 3D Indoor Navigation</a></li>
+    <li><a href="https://davidsonic.github.io/academic_blog/project/rl-indoor-navigation/">RL 3D Indoor Navigation</a></li>
   </ul>
   
   <ul>
-    <li><a href="http://davidsonic.github.io/academic_blog/project/portraitgan/">Portrait Manipulation with GAN (offline)</a></li>
+    <li><a href="https://davidsonic.github.io/academic_blog/project/portraitgan/">Portrait Manipulation with GAN (offline)</a></li>
   </ul>
   
   <ul>
-    <li><a href="http://davidsonic.github.io/academic_blog/project/unity-webgl/">Unity Webgl (Try)</a></li>
+    <li><a href="https://davidsonic.github.io/academic_blog/project/unity-webgl/">Unity Webgl (Try)</a></li>
   </ul>
   
   <ul>
-    <li><a href="http://davidsonic.github.io/academic_blog/project/mcl-server/">Mcl Server</a></li>
+    <li><a href="https://davidsonic.github.io/academic_blog/project/mcl-server/">Mcl Server</a></li>
   </ul>
   
   <ul>
-    <li><a href="http://davidsonic.github.io/academic_blog/project/saak-transform/">Saak Transform</a></li>
+    <li><a href="https://davidsonic.github.io/academic_blog/project/saak-transform/">Saak Transform</a></li>
   </ul>
   
   
