--- a/publication/digit-syn/index.html
+++ b/publication/digit-syn/index.html
@@ -18,7 +18,7 @@
   <meta name="description" content="An interpretable generative model for handwritten digits synthe- sis is proposed in this work. Modern image generative models, such as Generative Adversarial Networks (GANs) and Variational Au- toencoders (VAEs), are trained by backpropagation (BP). The train- ing process is complex and the underlying mechanism is difficult to explain. We propose an interpretable multi-stage PCA method to achieve the same goal and use handwritten digit images synthesis as an illustrative example. First, we derive principal-component- analysis-based (PCA-based) transform kernels at each stage based on the covariance of its inputs. This results in a sequence of trans- forms that convert input images of correlated pixels to spectral vec- tors of uncorrelated components. In other words, it is a whitening process. Then, we can synthesize an image based on random vectors and multi-stage transform kernels through a coloring process. The generative model is a feedforward (FF) design since no BP is used in model parameter determination. Its design complexity is signifi- cantly lower, and the whole design process is explainable. Finally, we design an FF generative model using the MNIST dataset, com- pare synthesis results with those obtained by state-of-the-art GAN and VAE methods, and show that the proposed generative model achieves comparable performance.">
 
   
-  <link rel="alternate" hreflang="en-us" href="http://davidsonic.github.io/academic_blog/publication/digit-syn/">
+  <link rel="alternate" hreflang="en-us" href="https://davidsonic.github.io/academic_blog/publication/digit-syn/">
 
   
 
@@ -74,20 +74,20 @@
   
 
   
-  <link rel="alternate" href="http://davidsonic.github.io/academic_blog/index.xml" type="application/rss+xml" title="Jiali Duan&#39;s Personal Website">
-  <link rel="feed" href="http://davidsonic.github.io/academic_blog/index.xml" type="application/rss+xml" title="Jiali Duan&#39;s Personal Website">
+  <link rel="alternate" href="https://davidsonic.github.io/academic_blog/index.xml" type="application/rss+xml" title="Jiali Duan&#39;s Personal Website">
+  <link rel="feed" href="https://davidsonic.github.io/academic_blog/index.xml" type="application/rss+xml" title="Jiali Duan&#39;s Personal Website">
   
 
   <link rel="manifest" href="/academic_blog/site.webmanifest">
   <link rel="icon" type="image/png" href="/academic_blog/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/academic_blog/img/icon-192.png">
 
-  <link rel="canonical" href="http://davidsonic.github.io/academic_blog/publication/digit-syn/">
+  <link rel="canonical" href="https://davidsonic.github.io/academic_blog/publication/digit-syn/">
 
   <meta property="twitter:card" content="summary_large_image">
   
   <meta property="og:site_name" content="Jiali Duan&#39;s Personal Website">
-  <meta property="og:url" content="http://davidsonic.github.io/academic_blog/publication/digit-syn/">
+  <meta property="og:url" content="https://davidsonic.github.io/academic_blog/publication/digit-syn/">
   <meta property="og:title" content="AN INTERPRETABLE GENERATIVE MODEL FOR HANDWRITTEN DIGIT IMAGE SYNTHESIS | Jiali Duan&#39;s Personal Website">
   <meta property="og:description" content="An interpretable generative model for handwritten digits synthe- sis is proposed in this work. Modern image generative models, such as Generative Adversarial Networks (GANs) and Variational Au- toencoders (VAEs), are trained by backpropagation (BP). The train- ing process is complex and the underlying mechanism is difficult to explain. We propose an interpretable multi-stage PCA method to achieve the same goal and use handwritten digit images synthesis as an illustrative example. First, we derive principal-component- analysis-based (PCA-based) transform kernels at each stage based on the covariance of its inputs. This results in a sequence of trans- forms that convert input images of correlated pixels to spectral vec- tors of uncorrelated components. In other words, it is a whitening process. Then, we can synthesize an image based on random vectors and multi-stage transform kernels through a coloring process. The generative model is a feedforward (FF) design since no BP is used in model parameter determination. Its design complexity is signifi- cantly lower, and the whole design process is explainable. Finally, we design an FF generative model using the MNIST dataset, com- pare synthesis results with those obtained by state-of-the-art GAN and VAE methods, and show that the proposed generative model achieves comparable performance.">
   <meta property="og:locale" content="en-us">
@@ -252,35 +252,35 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=AN%20INTERPRETABLE%20GENERATIVE%20MODEL%20FOR%20HANDWRITTEN%20DIGIT%20IMAGE%20SYNTHESIS&amp;url=http%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fpublication%2fdigit-syn%2f"
+         href="https://twitter.com/intent/tweet?text=AN%20INTERPRETABLE%20GENERATIVE%20MODEL%20FOR%20HANDWRITTEN%20DIGIT%20IMAGE%20SYNTHESIS&amp;url=https%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fpublication%2fdigit-syn%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-twitter"></i>
       </a>
     </li>
     <li>
       <a class="facebook"
-         href="https://www.facebook.com/sharer.php?u=http%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fpublication%2fdigit-syn%2f"
+         href="https://www.facebook.com/sharer.php?u=https%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fpublication%2fdigit-syn%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-facebook"></i>
       </a>
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=http%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fpublication%2fdigit-syn%2f&amp;title=AN%20INTERPRETABLE%20GENERATIVE%20MODEL%20FOR%20HANDWRITTEN%20DIGIT%20IMAGE%20SYNTHESIS"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fpublication%2fdigit-syn%2f&amp;title=AN%20INTERPRETABLE%20GENERATIVE%20MODEL%20FOR%20HANDWRITTEN%20DIGIT%20IMAGE%20SYNTHESIS"
          target="_blank" rel="noopener">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=http%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fpublication%2fdigit-syn%2f&amp;title=AN%20INTERPRETABLE%20GENERATIVE%20MODEL%20FOR%20HANDWRITTEN%20DIGIT%20IMAGE%20SYNTHESIS"
+         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fpublication%2fdigit-syn%2f&amp;title=AN%20INTERPRETABLE%20GENERATIVE%20MODEL%20FOR%20HANDWRITTEN%20DIGIT%20IMAGE%20SYNTHESIS"
          target="_blank" rel="noopener">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=AN%20INTERPRETABLE%20GENERATIVE%20MODEL%20FOR%20HANDWRITTEN%20DIGIT%20IMAGE%20SYNTHESIS&amp;body=http%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fpublication%2fdigit-syn%2f">
+         href="mailto:?subject=AN%20INTERPRETABLE%20GENERATIVE%20MODEL%20FOR%20HANDWRITTEN%20DIGIT%20IMAGE%20SYNTHESIS&amp;body=https%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fpublication%2fdigit-syn%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
@@ -305,7 +305,7 @@
           <div class="col-xs-12 col-sm-3 pub-row-heading">Type</div>
           <div class="col-xs-12 col-sm-9">
             
-            <a href="http://davidsonic.github.io/academic_blog/publication/#1">
+            <a href="https://davidsonic.github.io/academic_blog/publication/#1">
               Conference paper
             </a>
             
