--- a/publication/index.html
+++ b/publication/index.html
@@ -16,7 +16,7 @@
   <meta name="description" content="PhD of Electrical Engineering">
 
   
-  <link rel="alternate" hreflang="en-us" href="http://davidsonic.github.io/academic_blog/publication/">
+  <link rel="alternate" hreflang="en-us" href="https://davidsonic.github.io/academic_blog/publication/">
 
   
 
@@ -65,20 +65,20 @@
   
 
   
-  <link rel="alternate" href="http://davidsonic.github.io/academic_blog/publication/index.xml" type="application/rss+xml" title="Jiali Duan&#39;s Personal Website">
-  <link rel="feed" href="http://davidsonic.github.io/academic_blog/publication/index.xml" type="application/rss+xml" title="Jiali Duan&#39;s Personal Website">
+  <link rel="alternate" href="https://davidsonic.github.io/academic_blog/publication/index.xml" type="application/rss+xml" title="Jiali Duan&#39;s Personal Website">
+  <link rel="feed" href="https://davidsonic.github.io/academic_blog/publication/index.xml" type="application/rss+xml" title="Jiali Duan&#39;s Personal Website">
   
 
   <link rel="manifest" href="/academic_blog/site.webmanifest">
   <link rel="icon" type="image/png" href="/academic_blog/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/academic_blog/img/icon-192.png">
 
-  <link rel="canonical" href="http://davidsonic.github.io/academic_blog/publication/">
+  <link rel="canonical" href="https://davidsonic.github.io/academic_blog/publication/">
 
   <meta property="twitter:card" content="summary_large_image">
   
   <meta property="og:site_name" content="Jiali Duan&#39;s Personal Website">
-  <meta property="og:url" content="http://davidsonic.github.io/academic_blog/publication/">
+  <meta property="og:url" content="https://davidsonic.github.io/academic_blog/publication/">
   <meta property="og:title" content="Publications | Jiali Duan&#39;s Personal Website">
   <meta property="og:description" content="PhD of Electrical Engineering">
   <meta property="og:locale" content="en-us">
@@ -322,7 +322,7 @@
   <i class="fa fa-file-text-o pub-icon" aria-hidden="true"></i>
   <span itemprop="author">
     Jiali Duan, Qian Wang, Lerrel Pinto, C.-C. Jay Kuo, Stefanos Nikolaidis</span>.
-  <a href="http://davidsonic.github.io/academic_blog/publication/robot-socal/" itemprop="name">Robust Grasping via Human Adversary</a>.
+  <a href="https://davidsonic.github.io/academic_blog/publication/robot-socal/" itemprop="name">Robust Grasping via Human Adversary</a>.
   Southern California Robotics Symposium (Spotlight),
   2019.
   <p>
@@ -369,7 +369,7 @@
   <i class="fa fa-file-text-o pub-icon" aria-hidden="true"></i>
   <span itemprop="author">
     Jiali Duan, Qian Wang, Lerrel Pinto, C.-C. Jay Kuo, Stefanos Nikolaidis</span>.
-  <a href="http://davidsonic.github.io/academic_blog/publication/robot-iros/" itemprop="name">Robot Learning via Human Adversarial Games</a>.
+  <a href="https://davidsonic.github.io/academic_blog/publication/robot-iros/" itemprop="name">Robot Learning via Human Adversarial Games</a>.
   IROS (Oral),
   2019.
   <p>
@@ -412,7 +412,7 @@
   <i class="fa fa-file-text-o pub-icon" aria-hidden="true"></i>
   <span itemprop="author">
     Yao Zhu, Saksham Suri, Pranav Kulkarni, Yueru Chen, Jiali Duan, C.-C. Jay Kuo</span>.
-  <a href="http://davidsonic.github.io/academic_blog/publication/digit-syn/" itemprop="name">AN INTERPRETABLE GENERATIVE MODEL FOR HANDWRITTEN DIGIT IMAGE SYNTHESIS</a>.
+  <a href="https://davidsonic.github.io/academic_blog/publication/digit-syn/" itemprop="name">AN INTERPRETABLE GENERATIVE MODEL FOR HANDWRITTEN DIGIT IMAGE SYNTHESIS</a>.
   ICIP,
   2018.
   <p>
@@ -455,7 +455,7 @@
   <i class="fa fa-file-text-o pub-icon" aria-hidden="true"></i>
   <span itemprop="author">
     C.C-Jay Kuo, Min Zhang, Siyang Li, Jiali Duan, Yueru Chen</span>.
-  <a href="http://davidsonic.github.io/academic_blog/publication/interpretable/" itemprop="name">Interpretable Convolutional Neural Networks via Feedforward Design</a>.
+  <a href="https://davidsonic.github.io/academic_blog/publication/interpretable/" itemprop="name">Interpretable Convolutional Neural Networks via Feedforward Design</a>.
   JVCI,
   2018.
   <p>
@@ -498,7 +498,7 @@
   <i class="fa fa-file-text-o pub-icon" aria-hidden="true"></i>
   <span itemprop="author">
     Jiali Duan, Xiaoyuan Guo, Yuhang Song, Chao Yang, C.C-Jay Kuo</span>.
-  <a href="http://davidsonic.github.io/academic_blog/publication/portraitgan/" itemprop="name">PortraitGAN for Flexible Portrait Manipulation</a>.
+  <a href="https://davidsonic.github.io/academic_blog/publication/portraitgan/" itemprop="name">PortraitGAN for Flexible Portrait Manipulation</a>.
   Arxiv,
   2018.
   <p>
@@ -541,7 +541,7 @@
   <i class="fa fa-file-text-o pub-icon" aria-hidden="true"></i>
   <span itemprop="author">
     Jiali Duan, Jun Wan, Shuai Zhou, Xiaoyuan Guo, Stan Z. Li</span>.
-  <a href="http://davidsonic.github.io/academic_blog/publication/multi-model/" itemprop="name">A Unified Framework for Multi-Modal Isolated Gesture Recognition</a>.
+  <a href="https://davidsonic.github.io/academic_blog/publication/multi-model/" itemprop="name">A Unified Framework for Multi-Modal Isolated Gesture Recognition</a>.
   TOMM,
   2017.
   <p>
@@ -584,7 +584,7 @@
   <i class="fa fa-file-text-o pub-icon" aria-hidden="true"></i>
   <span itemprop="author">
     Jiali Duan, Shuai Zhou, Jun Wan, Xiaoyuan Guo, Stan Z. Li</span>.
-  <a href="http://davidsonic.github.io/academic_blog/publication/gesture-recog/" itemprop="name">Multi-Modality Fusion based on Consensus-Voting and 3D Convolution for Isolated Gesture Recognition</a>.
+  <a href="https://davidsonic.github.io/academic_blog/publication/gesture-recog/" itemprop="name">Multi-Modality Fusion based on Consensus-Voting and 3D Convolution for Isolated Gesture Recognition</a>.
   Arxiv,
   2016.
   <p>
@@ -627,7 +627,7 @@
   <i class="fa fa-file-text-o pub-icon" aria-hidden="true"></i>
   <span itemprop="author">
     Jiali Duan, Shengcai Liao, Xiaoyuan Guo, Stan Z. Li</span>.
-  <a href="http://davidsonic.github.io/academic_blog/publication/face-detect/" itemprop="name">Face Detection by Aggregating Visible Components</a>.
+  <a href="https://davidsonic.github.io/academic_blog/publication/face-detect/" itemprop="name">Face Detection by Aggregating Visible Components</a>.
   ACCV (Oral),
   2016.
   <p>
@@ -678,7 +678,7 @@
   <i class="fa fa-file-text-o pub-icon" aria-hidden="true"></i>
   <span itemprop="author">
     Jiali Duan, Shengcai Liao, Shuai Zhou, Stan Z. Li</span>.
-  <a href="http://davidsonic.github.io/academic_blog/publication/face-classify/" itemprop="name">Face Classification: A Specialized Benchmark Study</a>.
+  <a href="https://davidsonic.github.io/academic_blog/publication/face-classify/" itemprop="name">Face Classification: A Specialized Benchmark Study</a>.
   CCBR (Best Student Paper),
   2016.
   <p>
