--- a/publication/robot-iros/index.html
+++ b/publication/robot-iros/index.html
@@ -18,7 +18,7 @@
   <meta name="description" content="Much work in robotics has focused on “human- in-the-loop” learning techniques that improve the efficiency of the learning process. However, these algorithms have made the strong assumption of a cooperating human supervisor that assists the robot. In reality, human observers tend to also act in an adversarial manner towards deployed robotic systems. We show that this can in fact improve the robustness of the learned models by proposing a physical framework that leverages perturbations applied by a human adversary, guiding the robot towards more robust models. In a manipulation task, we show that grasping success improves significantly when the robot trains with a human adversary as compared to training in a self-supervised manner.">
 
   
-  <link rel="alternate" hreflang="en-us" href="http://davidsonic.github.io/academic_blog/publication/robot-iros/">
+  <link rel="alternate" hreflang="en-us" href="https://davidsonic.github.io/academic_blog/publication/robot-iros/">
 
   
 
@@ -74,20 +74,20 @@
   
 
   
-  <link rel="alternate" href="http://davidsonic.github.io/academic_blog/index.xml" type="application/rss+xml" title="Jiali Duan&#39;s Personal Website">
-  <link rel="feed" href="http://davidsonic.github.io/academic_blog/index.xml" type="application/rss+xml" title="Jiali Duan&#39;s Personal Website">
+  <link rel="alternate" href="https://davidsonic.github.io/academic_blog/index.xml" type="application/rss+xml" title="Jiali Duan&#39;s Personal Website">
+  <link rel="feed" href="https://davidsonic.github.io/academic_blog/index.xml" type="application/rss+xml" title="Jiali Duan&#39;s Personal Website">
   
 
   <link rel="manifest" href="/academic_blog/site.webmanifest">
   <link rel="icon" type="image/png" href="/academic_blog/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/academic_blog/img/icon-192.png">
 
-  <link rel="canonical" href="http://davidsonic.github.io/academic_blog/publication/robot-iros/">
+  <link rel="canonical" href="https://davidsonic.github.io/academic_blog/publication/robot-iros/">
 
   <meta property="twitter:card" content="summary_large_image">
   
   <meta property="og:site_name" content="Jiali Duan&#39;s Personal Website">
-  <meta property="og:url" content="http://davidsonic.github.io/academic_blog/publication/robot-iros/">
+  <meta property="og:url" content="https://davidsonic.github.io/academic_blog/publication/robot-iros/">
   <meta property="og:title" content="Robot Learning via Human Adversarial Games | Jiali Duan&#39;s Personal Website">
   <meta property="og:description" content="Much work in robotics has focused on “human- in-the-loop” learning techniques that improve the efficiency of the learning process. However, these algorithms have made the strong assumption of a cooperating human supervisor that assists the robot. In reality, human observers tend to also act in an adversarial manner towards deployed robotic systems. We show that this can in fact improve the robustness of the learned models by proposing a physical framework that leverages perturbations applied by a human adversary, guiding the robot towards more robust models. In a manipulation task, we show that grasping success improves significantly when the robot trains with a human adversary as compared to training in a self-supervised manner.">
   <meta property="og:locale" content="en-us">
@@ -252,35 +252,35 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=Robot%20Learning%20via%20Human%20Adversarial%20Games&amp;url=http%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fpublication%2frobot-iros%2f"
+         href="https://twitter.com/intent/tweet?text=Robot%20Learning%20via%20Human%20Adversarial%20Games&amp;url=https%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fpublication%2frobot-iros%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-twitter"></i>
       </a>
     </li>
     <li>
       <a class="facebook"
-         href="https://www.facebook.com/sharer.php?u=http%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fpublication%2frobot-iros%2f"
+         href="https://www.facebook.com/sharer.php?u=https%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fpublication%2frobot-iros%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-facebook"></i>
       </a>
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=http%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fpublication%2frobot-iros%2f&amp;title=Robot%20Learning%20via%20Human%20Adversarial%20Games"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fpublication%2frobot-iros%2f&amp;title=Robot%20Learning%20via%20Human%20Adversarial%20Games"
          target="_blank" rel="noopener">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=http%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fpublication%2frobot-iros%2f&amp;title=Robot%20Learning%20via%20Human%20Adversarial%20Games"
+         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fpublication%2frobot-iros%2f&amp;title=Robot%20Learning%20via%20Human%20Adversarial%20Games"
          target="_blank" rel="noopener">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=Robot%20Learning%20via%20Human%20Adversarial%20Games&amp;body=http%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fpublication%2frobot-iros%2f">
+         href="mailto:?subject=Robot%20Learning%20via%20Human%20Adversarial%20Games&amp;body=https%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fpublication%2frobot-iros%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
@@ -305,7 +305,7 @@
           <div class="col-xs-12 col-sm-3 pub-row-heading">Type</div>
           <div class="col-xs-12 col-sm-9">
             
-            <a href="http://davidsonic.github.io/academic_blog/publication/#1">
+            <a href="https://davidsonic.github.io/academic_blog/publication/#1">
               Conference paper
             </a>
             
