--- a/project/mcl-server/index.html
+++ b/project/mcl-server/index.html
@@ -18,7 +18,7 @@
   <meta name="description" content="Maintain and extend server scheduling system for MCL lab">
 
   
-  <link rel="alternate" hreflang="en-us" href="http://davidsonic.github.io/academic_blog/project/mcl-server/">
+  <link rel="alternate" hreflang="en-us" href="https://davidsonic.github.io/academic_blog/project/mcl-server/">
 
   
 
@@ -74,20 +74,20 @@
   
 
   
-  <link rel="alternate" href="http://davidsonic.github.io/academic_blog/index.xml" type="application/rss+xml" title="Jiali Duan&#39;s Personal Website">
-  <link rel="feed" href="http://davidsonic.github.io/academic_blog/index.xml" type="application/rss+xml" title="Jiali Duan&#39;s Personal Website">
+  <link rel="alternate" href="https://davidsonic.github.io/academic_blog/index.xml" type="application/rss+xml" title="Jiali Duan&#39;s Personal Website">
+  <link rel="feed" href="https://davidsonic.github.io/academic_blog/index.xml" type="application/rss+xml" title="Jiali Duan&#39;s Personal Website">
   
 
   <link rel="manifest" href="/academic_blog/site.webmanifest">
   <link rel="icon" type="image/png" href="/academic_blog/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/academic_blog/img/icon-192.png">
 
-  <link rel="canonical" href="http://davidsonic.github.io/academic_blog/project/mcl-server/">
+  <link rel="canonical" href="https://davidsonic.github.io/academic_blog/project/mcl-server/">
 
   <meta property="twitter:card" content="summary_large_image">
   
   <meta property="og:site_name" content="Jiali Duan&#39;s Personal Website">
-  <meta property="og:url" content="http://davidsonic.github.io/academic_blog/project/mcl-server/">
+  <meta property="og:url" content="https://davidsonic.github.io/academic_blog/project/mcl-server/">
   <meta property="og:title" content="Mcl Server | Jiali Duan&#39;s Personal Website">
   <meta property="og:description" content="Maintain and extend server scheduling system for MCL lab">
   <meta property="og:locale" content="en-us">
@@ -251,35 +251,35 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=Mcl%20Server&amp;url=http%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fproject%2fmcl-server%2f"
+         href="https://twitter.com/intent/tweet?text=Mcl%20Server&amp;url=https%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fproject%2fmcl-server%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-twitter"></i>
       </a>
     </li>
     <li>
       <a class="facebook"
-         href="https://www.facebook.com/sharer.php?u=http%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fproject%2fmcl-server%2f"
+         href="https://www.facebook.com/sharer.php?u=https%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fproject%2fmcl-server%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-facebook"></i>
       </a>
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=http%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fproject%2fmcl-server%2f&amp;title=Mcl%20Server"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fproject%2fmcl-server%2f&amp;title=Mcl%20Server"
          target="_blank" rel="noopener">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=http%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fproject%2fmcl-server%2f&amp;title=Mcl%20Server"
+         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fproject%2fmcl-server%2f&amp;title=Mcl%20Server"
          target="_blank" rel="noopener">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=Mcl%20Server&amp;body=http%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fproject%2fmcl-server%2f">
+         href="mailto:?subject=Mcl%20Server&amp;body=https%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fproject%2fmcl-server%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
