--- a/publication/face-classify/index.html
+++ b/publication/face-classify/index.html
@@ -18,7 +18,7 @@
   <meta name="description" content="We conduct a specialized benchmark study in this paper, which focuses on face classifica tion. We start with face proposals, and build a benchmark dataset with about 3.5 million patches for two-class face/non-face classification. Results with several baseline algorithms show that, without the help of post-processing, the performance of face classification itself is still not very satisfactory, even with a powerful CNN method. We’ll release this benchmark to help assess performance of face classification only, and ease the participation of other related researchers.">
 
   
-  <link rel="alternate" hreflang="en-us" href="http://davidsonic.github.io/academic_blog/publication/face-classify/">
+  <link rel="alternate" hreflang="en-us" href="https://davidsonic.github.io/academic_blog/publication/face-classify/">
 
   
 
@@ -74,20 +74,20 @@
   
 
   
-  <link rel="alternate" href="http://davidsonic.github.io/academic_blog/index.xml" type="application/rss+xml" title="Jiali Duan&#39;s Personal Website">
-  <link rel="feed" href="http://davidsonic.github.io/academic_blog/index.xml" type="application/rss+xml" title="Jiali Duan&#39;s Personal Website">
+  <link rel="alternate" href="https://davidsonic.github.io/academic_blog/index.xml" type="application/rss+xml" title="Jiali Duan&#39;s Personal Website">
+  <link rel="feed" href="https://davidsonic.github.io/academic_blog/index.xml" type="application/rss+xml" title="Jiali Duan&#39;s Personal Website">
   
 
   <link rel="manifest" href="/academic_blog/site.webmanifest">
   <link rel="icon" type="image/png" href="/academic_blog/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/academic_blog/img/icon-192.png">
 
-  <link rel="canonical" href="http://davidsonic.github.io/academic_blog/publication/face-classify/">
+  <link rel="canonical" href="https://davidsonic.github.io/academic_blog/publication/face-classify/">
 
   <meta property="twitter:card" content="summary_large_image">
   
   <meta property="og:site_name" content="Jiali Duan&#39;s Personal Website">
-  <meta property="og:url" content="http://davidsonic.github.io/academic_blog/publication/face-classify/">
+  <meta property="og:url" content="https://davidsonic.github.io/academic_blog/publication/face-classify/">
   <meta property="og:title" content="Face Classification: A Specialized Benchmark Study | Jiali Duan&#39;s Personal Website">
   <meta property="og:description" content="We conduct a specialized benchmark study in this paper, which focuses on face classifica tion. We start with face proposals, and build a benchmark dataset with about 3.5 million patches for two-class face/non-face classification. Results with several baseline algorithms show that, without the help of post-processing, the performance of face classification itself is still not very satisfactory, even with a powerful CNN method. We’ll release this benchmark to help assess performance of face classification only, and ease the participation of other related researchers.">
   <meta property="og:locale" content="en-us">
@@ -252,35 +252,35 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=Face%20Classification%3a%20A%20Specialized%20Benchmark%20Study&amp;url=http%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fpublication%2fface-classify%2f"
+         href="https://twitter.com/intent/tweet?text=Face%20Classification%3a%20A%20Specialized%20Benchmark%20Study&amp;url=https%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fpublication%2fface-classify%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-twitter"></i>
       </a>
     </li>
     <li>
       <a class="facebook"
-         href="https://www.facebook.com/sharer.php?u=http%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fpublication%2fface-classify%2f"
+         href="https://www.facebook.com/sharer.php?u=https%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fpublication%2fface-classify%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-facebook"></i>
       </a>
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=http%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fpublication%2fface-classify%2f&amp;title=Face%20Classification%3a%20A%20Specialized%20Benchmark%20Study"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fpublication%2fface-classify%2f&amp;title=Face%20Classification%3a%20A%20Specialized%20Benchmark%20Study"
          target="_blank" rel="noopener">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=http%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fpublication%2fface-classify%2f&amp;title=Face%20Classification%3a%20A%20Specialized%20Benchmark%20Study"
+         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fpublication%2fface-classify%2f&amp;title=Face%20Classification%3a%20A%20Specialized%20Benchmark%20Study"
          target="_blank" rel="noopener">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=Face%20Classification%3a%20A%20Specialized%20Benchmark%20Study&amp;body=http%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fpublication%2fface-classify%2f">
+         href="mailto:?subject=Face%20Classification%3a%20A%20Specialized%20Benchmark%20Study&amp;body=https%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fpublication%2fface-classify%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
@@ -305,7 +305,7 @@
           <div class="col-xs-12 col-sm-3 pub-row-heading">Type</div>
           <div class="col-xs-12 col-sm-9">
             
-            <a href="http://davidsonic.github.io/academic_blog/publication/#1">
+            <a href="https://davidsonic.github.io/academic_blog/publication/#1">
               Conference paper
             </a>
             
