--- a/publication/interpretable/index.html
+++ b/publication/interpretable/index.html
@@ -18,7 +18,7 @@
   <meta name="description" content="The model parameters of convolutional neural networks (CNNs) are determined by backpropagation (BP). In this work, we propose an interpretable feedforward (FF) design without any BP as a reference. The FF design adopts a data-centric approach. It derives network parameters of the current layer based on data statistics from the output of the previous layer in a one-pass manner. To construct convolutional layers, we develop a new signal transform, called the Saab (Subspace Approximation with Adjusted Bias) transform. It is a variant of the principal component analysis (PCA) with an added bias vector to annihilate activation&#39;s nonlinearity. Multiple Saab transforms in cascade yield multiple convolutional layers. As to fully-connected (FC) layers, we construct them using a cascade of multi-stage linear least squared regressors (LSRs). The classification and robustness (against adversarial attacks) performances of BP- and FF-designed CNNs applied to the MNIST and the CIFAR-10 datasets are compared. Finally, we comment on the relationship between BP and FF designs.">
 
   
-  <link rel="alternate" hreflang="en-us" href="http://davidsonic.github.io/academic_blog/publication/interpretable/">
+  <link rel="alternate" hreflang="en-us" href="https://davidsonic.github.io/academic_blog/publication/interpretable/">
 
   
 
@@ -74,20 +74,20 @@
   
 
   
-  <link rel="alternate" href="http://davidsonic.github.io/academic_blog/index.xml" type="application/rss+xml" title="Jiali Duan&#39;s Personal Website">
-  <link rel="feed" href="http://davidsonic.github.io/academic_blog/index.xml" type="application/rss+xml" title="Jiali Duan&#39;s Personal Website">
+  <link rel="alternate" href="https://davidsonic.github.io/academic_blog/index.xml" type="application/rss+xml" title="Jiali Duan&#39;s Personal Website">
+  <link rel="feed" href="https://davidsonic.github.io/academic_blog/index.xml" type="application/rss+xml" title="Jiali Duan&#39;s Personal Website">
   
 
   <link rel="manifest" href="/academic_blog/site.webmanifest">
   <link rel="icon" type="image/png" href="/academic_blog/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/academic_blog/img/icon-192.png">
 
-  <link rel="canonical" href="http://davidsonic.github.io/academic_blog/publication/interpretable/">
+  <link rel="canonical" href="https://davidsonic.github.io/academic_blog/publication/interpretable/">
 
   <meta property="twitter:card" content="summary_large_image">
   
   <meta property="og:site_name" content="Jiali Duan&#39;s Personal Website">
-  <meta property="og:url" content="http://davidsonic.github.io/academic_blog/publication/interpretable/">
+  <meta property="og:url" content="https://davidsonic.github.io/academic_blog/publication/interpretable/">
   <meta property="og:title" content="Interpretable Convolutional Neural Networks via Feedforward Design | Jiali Duan&#39;s Personal Website">
   <meta property="og:description" content="The model parameters of convolutional neural networks (CNNs) are determined by backpropagation (BP). In this work, we propose an interpretable feedforward (FF) design without any BP as a reference. The FF design adopts a data-centric approach. It derives network parameters of the current layer based on data statistics from the output of the previous layer in a one-pass manner. To construct convolutional layers, we develop a new signal transform, called the Saab (Subspace Approximation with Adjusted Bias) transform. It is a variant of the principal component analysis (PCA) with an added bias vector to annihilate activation&#39;s nonlinearity. Multiple Saab transforms in cascade yield multiple convolutional layers. As to fully-connected (FC) layers, we construct them using a cascade of multi-stage linear least squared regressors (LSRs). The classification and robustness (against adversarial attacks) performances of BP- and FF-designed CNNs applied to the MNIST and the CIFAR-10 datasets are compared. Finally, we comment on the relationship between BP and FF designs.">
   <meta property="og:locale" content="en-us">
@@ -252,35 +252,35 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=Interpretable%20Convolutional%20Neural%20Networks%20via%20Feedforward%20Design&amp;url=http%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fpublication%2finterpretable%2f"
+         href="https://twitter.com/intent/tweet?text=Interpretable%20Convolutional%20Neural%20Networks%20via%20Feedforward%20Design&amp;url=https%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fpublication%2finterpretable%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-twitter"></i>
       </a>
     </li>
     <li>
       <a class="facebook"
-         href="https://www.facebook.com/sharer.php?u=http%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fpublication%2finterpretable%2f"
+         href="https://www.facebook.com/sharer.php?u=https%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fpublication%2finterpretable%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-facebook"></i>
       </a>
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=http%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fpublication%2finterpretable%2f&amp;title=Interpretable%20Convolutional%20Neural%20Networks%20via%20Feedforward%20Design"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fpublication%2finterpretable%2f&amp;title=Interpretable%20Convolutional%20Neural%20Networks%20via%20Feedforward%20Design"
          target="_blank" rel="noopener">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=http%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fpublication%2finterpretable%2f&amp;title=Interpretable%20Convolutional%20Neural%20Networks%20via%20Feedforward%20Design"
+         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fpublication%2finterpretable%2f&amp;title=Interpretable%20Convolutional%20Neural%20Networks%20via%20Feedforward%20Design"
          target="_blank" rel="noopener">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=Interpretable%20Convolutional%20Neural%20Networks%20via%20Feedforward%20Design&amp;body=http%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fpublication%2finterpretable%2f">
+         href="mailto:?subject=Interpretable%20Convolutional%20Neural%20Networks%20via%20Feedforward%20Design&amp;body=https%3a%2f%2fdavidsonic.github.io%2facademic_blog%2fpublication%2finterpretable%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
@@ -305,7 +305,7 @@
           <div class="col-xs-12 col-sm-3 pub-row-heading">Type</div>
           <div class="col-xs-12 col-sm-9">
             
-            <a href="http://davidsonic.github.io/academic_blog/publication/#1">
+            <a href="https://davidsonic.github.io/academic_blog/publication/#1">
               Conference paper
             </a>
             
