Publishing to gh-pages (publish.sh)

--- a/404.html
+++ b/404.html
@@ -240,6 +240,10 @@
   <h2>Posts</h2>
   
   <ul>
+    <li><a href="https://davidsonic.github.io/academic_blog/post/deeplearn-chair/">Chair for USC Deep Learning Course Presentation</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="https://davidsonic.github.io/academic_blog/post/guest-lec-ee599-2020/">Guest Lecture for EE599-2020 (USC Deep Learning Course)</a></li>
   </ul>
   
@@ -253,10 +257,6 @@
   
   <ul>
     <li><a href="https://davidsonic.github.io/academic_blog/post/ee155/">EE155 File IO</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="https://davidsonic.github.io/academic_blog/post/deep-learning/">USC Deep Learning Presentation</a></li>
   </ul>
   
   
