Publishing to gh-pages (publish.sh)

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 
 <h1 id="biography">Biography</h1>
 
-<p>I&rsquo;m about to be a 3rd-year PhD at USC, who is passionate about deep reinforcement learning, robotics and computer vision. My academic site is located <a href="https://davidsonic.github.io/index/" target="_blank">here</a> and my coding blog is <a href="https://davidsonic.github.io/" target="_blank">here</a>. My supervisor is
+<p>I&rsquo;m a PhD Candidate at USC, who is passionate about deep reinforcement learning, robotics and computer vision. My academic site is located <a href="https://davidsonic.github.io/index/" target="_blank">here</a> and my coding blog is <a href="https://davidsonic.github.io/" target="_blank">here</a>. My supervisor is
 Prof. <a href="https://viterbi.usc.edu/directory/faculty/Kuo/Chung-Chieh" target="_blank">C.-C. Jay Kuo</a> and I&rsquo;ve also actively worked with Prof. <a href="http://www.stefanosnikolaidis.net/" target="_blank">Stefanos Nikolaidis</a>.
 Prior to joining MCL, I&rsquo;m fortunate to work with Prof. <a href="http://www.cbsr.ia.ac.cn/users/szli/" target="_blank">Stan Z. Li</a>, <a href="http://www.cbsr.ia.ac.cn/users/scliao/" target="_blank">Shengcai Liao</a> and <a href="http://www.cbsr.ia.ac.cn/users/jwan/" target="_blank">Jun Wan</a> at National Laboratory of Pattern Recognition, Institute of Aumation, Chinese Academy of Sciences. I also
 have intern experience at <a href="http://www.authenmetric.com/" target="_blank">AuthenMetric</a>, <a href="https://www.sensetime.com/" target="_blank">Sensetime (Beijing)</a> with Dr <a href="http://shijianping.me/" target="_blank">Jianping Shi</a> and <a href="https://www.a9.com/" target="_blank">Amazon A9</a>.</p>
