Publishing to gh-pages (publish.sh)

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 <p>I&rsquo;m a PhD Candidate at USC, who is passionate about deep reinforcement learning, robotics and computer vision. My supervisor is
 Prof. <a href="https://viterbi.usc.edu/directory/faculty/Kuo/Chung-Chieh" target="_blank">C.-C. Jay Kuo</a> and I&rsquo;m co-advised by Prof. <a href="http://www.stefanosnikolaidis.net/" target="_blank">Stefanos Nikolaidis</a>.
 Prior to joining MCL, I&rsquo;m fortunate to work with Prof. <a href="http://www.cbsr.ia.ac.cn/users/szli/" target="_blank">Stan Z. Li</a>, <a href="http://www.cbsr.ia.ac.cn/users/scliao/" target="_blank">Shengcai Liao</a> and <a href="http://www.cbsr.ia.ac.cn/users/jwan/" target="_blank">Jun Wan</a> at National Laboratory of Pattern Recognition, Chinese Academy of Sciences. I also
-have intern experience at <a href="http://www.authenmetric.com/" target="_blank">AuthenMetric</a>, <a href="https://www.sensetime.com/" target="_blank">Sensetime (Beijing)</a> and <a href="https://www.a9.com/" target="_blank">Amazon A9</a>. Visit my <a href="https://davidsonic.github.io/index/" target="_blank">academic site</a> and <a href="https://davidsonic.github.io/" target="_blank">coding blog</a></p>
+have intern experience at <a href="http://www.authenmetric.com/" target="_blank">AuthenMetric</a>, <a href="https://www.sensetime.com/" target="_blank">Sensetime (Beijing)</a> and <a href="https://www.a9.com/" target="_blank">Amazon A9</a>. Visit my <a href="https://davidsonic.github.io/index/" target="_blank">academic site</a> and <a href="https://davidsonic.github.io/" target="_blank">coding blog</a>.</p>
 
 
     <div class="row">
